@@ -1472,6 +1472,388 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testParameterSubstitution
+specifier|public
+name|void
+name|testParameterSubstitution
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+operator|new
+name|UpdateRequest
+argument_list|()
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"hello0"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"0"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"hello2"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"0"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"3"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"hello3"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"3"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"3"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"hello4"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"4"
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"hello1"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"1"
+argument_list|)
+operator|.
+name|commit
+argument_list|(
+name|cluster
+operator|.
+name|getSolrClient
+argument_list|()
+argument_list|,
+name|COLLECTION
+argument_list|)
+expr_stmt|;
+name|String
+name|url
+init|=
+name|cluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"/"
+operator|+
+name|COLLECTION
+decl_stmt|;
+name|List
+argument_list|<
+name|Tuple
+argument_list|>
+name|tuples
+decl_stmt|;
+name|TupleStream
+name|stream
+decl_stmt|;
+comment|// Basic test
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|params
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"expr"
+argument_list|,
+literal|"merge("
+operator|+
+literal|"${q1},"
+operator|+
+literal|"${q2},"
+operator|+
+literal|"on=${mySort})"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|,
+literal|"/stream"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"q1"
+argument_list|,
+literal|"search("
+operator|+
+name|COLLECTION
+operator|+
+literal|", q=\"id:(0 3 4)\", fl=\"id,a_s,a_i,a_f\", sort=${mySort})"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"q2"
+argument_list|,
+literal|"search("
+operator|+
+name|COLLECTION
+operator|+
+literal|", q=\"id:(1)\", fl=\"id,a_s,a_i,a_f\", sort=${mySort})"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"mySort"
+argument_list|,
+literal|"a_f asc"
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+operator|new
+name|SolrStream
+argument_list|(
+name|url
+argument_list|,
+name|params
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|tuples
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertOrder
+argument_list|(
+name|tuples
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|3
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+comment|// Basic test desc
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"mySort"
+argument_list|,
+literal|"a_f desc"
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+operator|new
+name|SolrStream
+argument_list|(
+name|url
+argument_list|,
+name|params
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|tuples
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertOrder
+argument_list|(
+name|tuples
+argument_list|,
+literal|4
+argument_list|,
+literal|3
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// Basic w/ multi comp
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"q2"
+argument_list|,
+literal|"search("
+operator|+
+name|COLLECTION
+operator|+
+literal|", q=\"id:(1 2)\", fl=\"id,a_s,a_i,a_f\", sort=${mySort})"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|put
+argument_list|(
+literal|"mySort"
+argument_list|,
+literal|"\"a_f asc, a_s asc\""
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+operator|new
+name|SolrStream
+argument_list|(
+name|url
+argument_list|,
+name|params
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|tuples
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertOrder
+argument_list|(
+name|tuples
+argument_list|,
+literal|0
+argument_list|,
+literal|2
+argument_list|,
+literal|1
+argument_list|,
+literal|3
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testUniqueStream
 specifier|public
 name|void
